[package]
name = "cute"
version = "0.2.1"
authors = ["Matt Gathu <mattgathu@gmail.com>"]

description = "A macro for Python-esque comprehensions"

documentation = "https://docs.rs/cute"
homepage = "https://github.com/mattgathu/cute"
repository = "https://github.com/mattgathu/cute"
readme = "README.md"
keywords = ["macro", "comprehensions", "python", "list", "hashmaps"]
categories = ["rust-patterns"]
license = "MIT"

[badges]
travis-ci = { repository = "mattgathu/cute"}
appveyor = { repository = "mattgathu/cute"}

[dependencies]
